--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,7 +4,9 @@
     "paths": {
       "layout": ["src/layout"],
       "common": ["src/common"],
+      "common/*": ["src/common/*"],
       "components": ["src/components/*"],
+      "@core": ["src/core"],
       "@core/*": ["src/core/*"]
     }
   }
