--- a/tsconfig.overrides.json
+++ b/tsconfig.overrides.json
@@ -6,8 +6,11 @@
       "common": ["src/common"],
       "common/*": ["src/common/*"],
       "components": ["src/components/*"],
-      "@core": ["src/core"],
+      "@core": ["./src/core"],
       "@core/*": ["src/core/*"]
     }
-  }
+  },
+  "files": [
+    "typings.d.ts"
+  ]
 }
