--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^3.9.7"
   },
   "scripts": {
