--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "isolatedModules": true,
     "strictPropertyInitialization": false,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src"
