--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "noEmit": true,
     "jsx": "react",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "noImplicitAny": false
   },
   "include": [
     "src"
