--- a/tsconfig.overrides.json
+++ b/tsconfig.overrides.json
@@ -6,8 +6,10 @@
       "common": ["src/common"],
       "common/*": ["src/common/*"],
       "components": ["src/components/*"],
-      "@core": ["./src/core"],
-      "@core/*": ["src/core/*"]
+      "@engine": ["src/engine/package"],
+      "@engine/*": ["src/engine/package/*"],
+      "@engine/core": ["src/engine/core"],
+      "@engine/core/*": ["src/engine/core/*"]
     }
   },
   "files": [
